--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -24,9 +24,10 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
+    - name: Install system dictionaries
+      run: sudo apt-get install -y wamerican wpolish
     - name: Install dependencies
       run: |
-        apt-get -y install wamerican wpolish
         python -m pip install --upgrade pip
         python -m pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
