--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -25,7 +25,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install system dictionaries
-      run: sudo apt-get install -y wamerican wpolish
+      run: sudo apt-get install -y wamerican wpolish wesperanto wgerman-medical
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
